[package]
name = "skatebit-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
serde_json = "1.0.140"
once_cell = "1.21.3"
