[package]
name = "skatebit-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
anyhow = "1.0"